; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath9k/extr_ani.c_ath9k_hw_update_mibstats.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath9k/extr_ani.c_ath9k_hw_update_mibstats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hw = type { i32 }
%struct.ath9k_mib_stats = type { i32, i32, i32, i32, i32 }

@AR_RTS_OK = common dso_local global i64 0, align 8
@AR_RTS_FAIL = common dso_local global i64 0, align 8
@AR_ACK_FAIL = common dso_local global i64 0, align 8
@AR_FCS_FAIL = common dso_local global i64 0, align 8
@AR_BEACON_CNT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ath_hw*, %struct.ath9k_mib_stats*)* @ath9k_hw_update_mibstats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath9k_hw_update_mibstats(%struct.ath_hw* %0, %struct.ath9k_mib_stats* %1) #0 {
  %3 = alloca %struct.ath_hw*, align 8
  %4 = alloca %struct.ath9k_mib_stats*, align 8
  %5 = alloca [5 x i64], align 16
  %6 = alloca [5 x i64], align 16
  store %struct.ath_hw* %0, %struct.ath_hw** %3, align 8
  store %struct.ath9k_mib_stats* %1, %struct.ath9k_mib_stats** %4, align 8
  %7 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 0
  %8 = load i64, i64* @AR_RTS_OK, align 8
  store i64 %8, i64* %7, align 8
  %9 = getelementptr inbounds i64, i64* %7, i64 1
  %10 = load i64, i64* @AR_RTS_FAIL, align 8
  store i64 %10, i64* %9, align 8
  %11 = getelementptr inbounds i64, i64* %9, i64 1
  %12 = load i64, i64* @AR_ACK_FAIL, align 8
  store i64 %12, i64* %11, align 8
  %13 = getelementptr inbounds i64, i64* %11, i64 1
  %14 = load i64, i64* @AR_FCS_FAIL, align 8
  store i64 %14, i64* %13, align 8
  %15 = getelementptr inbounds i64, i64* %13, i64 1
  %16 = load i64, i64* @AR_BEACON_CNT, align 8
  store i64 %16, i64* %15, align 8
  %17 = load %struct.ath_hw*, %struct.ath_hw** %3, align 8
  %18 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 0
  %19 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 0
  %20 = call i32 @REG_READ_MULTI(%struct.ath_hw* %17, i64* %18, i64* %19, i32 5)
  %21 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 0
  %22 = load i64, i64* %21, align 16
  %23 = load %struct.ath9k_mib_stats*, %struct.ath9k_mib_stats** %4, align 8
  %24 = getelementptr inbounds %struct.ath9k_mib_stats, %struct.ath9k_mib_stats* %23, i32 0, i32 4
  %25 = load i32, i32* %24, align 4
  %26 = sext i32 %25 to i64
  %27 = add nsw i64 %26, %22
  %28 = trunc i64 %27 to i32
  store i32 %28, i32* %24, align 4
  %29 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 1
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.ath9k_mib_stats*, %struct.ath9k_mib_stats** %4, align 8
  %32 = getelementptr inbounds %struct.ath9k_mib_stats, %struct.ath9k_mib_stats* %31, i32 0, i32 3
  %33 = load i32, i32* %32, align 4
  %34 = sext i32 %33 to i64
  %35 = add nsw i64 %34, %30
  %36 = trunc i64 %35 to i32
  store i32 %36, i32* %32, align 4
  %37 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 2
  %38 = load i64, i64* %37, align 16
  %39 = load %struct.ath9k_mib_stats*, %struct.ath9k_mib_stats** %4, align 8
  %40 = getelementptr inbounds %struct.ath9k_mib_stats, %struct.ath9k_mib_stats* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 4
  %42 = sext i32 %41 to i64
  %43 = add nsw i64 %42, %38
  %44 = trunc i64 %43 to i32
  store i32 %44, i32* %40, align 4
  %45 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 3
  %46 = load i64, i64* %45, align 8
  %47 = load %struct.ath9k_mib_stats*, %struct.ath9k_mib_stats** %4, align 8
  %48 = getelementptr inbounds %struct.ath9k_mib_stats, %struct.ath9k_mib_stats* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = sext i32 %49 to i64
  %51 = add nsw i64 %50, %46
  %52 = trunc i64 %51 to i32
  store i32 %52, i32* %48, align 4
  %53 = getelementptr inbounds [5 x i64], [5 x i64]* %6, i64 0, i64 4
  %54 = load i64, i64* %53, align 16
  %55 = load %struct.ath9k_mib_stats*, %struct.ath9k_mib_stats** %4, align 8
  %56 = getelementptr inbounds %struct.ath9k_mib_stats, %struct.ath9k_mib_stats* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 4
  %58 = sext i32 %57 to i64
  %59 = add nsw i64 %58, %54
  %60 = trunc i64 %59 to i32
  store i32 %60, i32* %56, align 4
  ret void
}

declare dso_local i32 @REG_READ_MULTI(%struct.ath_hw*, i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
